# burn

./: .gitignore  burn.cabal  default.nix  nixos-build.nix  release.nix  shell.nix  stack.yaml
burn/: burn.cabal  default.nix
burn-api/: burn-api.cabal
burn-api/src/Burn/: API.hs
burn-api/src/Burn/API/: Types.hs
burn-cli/: burn-cli.cabal  default.nix
burn-cli/src/Burn/: Cli.hs  CliRun.hs
burn-gtk/: burn-gtk.cabal  default.nix
burn-gtk/glade/: main.glade
burn-gtk/src/Burn/: Client.hs  Gtk.hs
burn-gtk/src/Burn/Gtk/: Cli.hs  Controller.hs  Model.hs  Run.hs  View.hs
burn/spec/: Spec.hs
burn/src/Burn/: API.hs  Cli.hs  Client.hs  Optparse.hs  Server.hs  State.hs  Statistics.hs  Storage.hs  TH.hs  Types.hs
burn/src/Burn/Client/: Query.hs  State.hs
burn/src/Burn/Optparse/: Args.hs  Client.hs  Elastic.hs  Server.hs  Settings.hs  Statistics.hs
burn/src/Burn/Server/: Handler.hs  Transform.hs
burn/src/Burn/Statistics/: Functions.hs  Query.hs  Types.hs
burn/src/Peridot/: Diffable.hs  TimeSeries.hs  Types.hs
nix/: buildWithNixpkgs.nix  pkgsOverlay.nix  sources.json
nix/haskellOverlay/: cairo.nix  default.nix  gio.nix  glib.nix  gtk3.nix  pango.nix
peridot/: default.nix  peridot.cabal
peridot/src/: Peridot.hs
peridot/src/Peridot/: Auxiliary.hs  Core.hs  Diffable.hs  Grouping.hs  Root.hs  Statistics.hs  TimeSeries.hs
peridot/src/Peridot/Grouping/: Group.hs  Key.hs
peridot/src/Peridot/Statistics/: Fold.hs  Key.hs
peridot/src/Peridot/TimeSeries/: Fold.hs  Keys.hs
peridot/test/: Test.hs
src/Burn/: API.hs  Server.hs  State.hs
src/Burn/API/: Types.hs
