name:                burn
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/burn#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs: src
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -Wall
  exposed-modules: Burn.State
  build-depends: base                        

executable burn
  hs-source-dirs:      bin
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
