name:                burn-api
version:             0.0.1
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/burn-api#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Burn.API
                     , Burn.API.Types
  build-depends:       aeson
                     , base >= 4.6 && < 5
                     , servant  >= 0.9.1.1
                     , text
  default-extensions: DataKinds
                    , TemplateHaskell
                    , TypeOperators
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/burn-api
