name:                burn-gtk
version:             0.0.1
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/burn-gtk#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

data-files: glade/main.glade
                
library
  hs-source-dirs: src
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -Wall
  exposed-modules: Burn.Gtk
                 , Burn.Gtk.View
  build-depends: base >= 4.6 && < 5
               , gtk3
               , lens
  default-extensions: DataKinds
                    , LambdaCase
                    , MultiWayIf
                    , RecordWildCards
                    , TemplateHaskell
                    , TypeOperators
                        

executable burn-gtk
  hs-source-dirs:      bin
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.6 && < 5
                     , burn-gtk
                     , gtk3
                     , lens
