name:                burn-gtk
version:             0.0.1
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/burn-gtk#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

data-files: glade/main.glade
          , images/*.png
                
library
  hs-source-dirs: src
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -Wall
  exposed-modules: Burn.Gtk
                 , Burn.Gtk.Controller
                 , Burn.Gtk.View
  build-depends: base >= 4.6 && < 5
               , burn
               , formatting
               , gtk3
               , http-client
               , lens
               , process
               , servant >= 0.9.1.1
               , servant-client >= 0.9.1.1
               , stm
               , text
               , time
               , transformers-base
  default-extensions: DataKinds
                    , LambdaCase
                    , MultiWayIf
                    , NumDecimals
                    , OverloadedStrings
                    , RecordWildCards
                    , TemplateHaskell
                    , TypeOperators
                    , ViewPatterns
                        

executable burn-gtk
  default-language: Haskell2010
  ghc-options:     -Wall -threaded
  hs-source-dirs:   bin
  main-is:          Main.hs
  build-depends: base >= 4.6 && < 5
               , burn-gtk
               , gtk3
               , lens
