name:                burn-gtk
version:             0.0.1
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/burn-gtk#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

data-files: glade/main.glade
          , images/*.png

library
  hs-source-dirs: src
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -Wall
  exposed-modules: Burn.Gtk
                 , Burn.Gtk.Cli
                 , Burn.Gtk.Controller
                 , Burn.Gtk.Model
                 , Burn.Gtk.Run
                 , Burn.Gtk.View
  other-modules: Paths_burn_gtk
  build-depends: base >= 4.6 && < 5
               , burn
               , containers
               , data-default
               , formatting
               , generic-lens
               , gtk3
               , http-client
               , lens
               , optparse-applicative
               , process
               , servant >= 0.9.1.1
               , servant-client >= 0.9.1.1
               , stm
               , text
               , time
               , transformers-base
  default-extensions: DataKinds
                    , DeriveGeneric
                    , DuplicateRecordFields
                    , FlexibleContexts
                    , LambdaCase
                    , MultiWayIf
                    , NumDecimals
                    , OverloadedLabels
                    , OverloadedStrings
                    , RecordWildCards
                    , ScopedTypeVariables
                    , TemplateHaskell
                    , TypeOperators
                    , ViewPatterns


executable burn-gtk
  default-language: Haskell2010
  ghc-options:     -Wall -threaded
  hs-source-dirs:   bin
  main-is:          Main.hs
  build-depends: base >= 4.6 && < 5
               , burn-gtk
