name:                burn
version:             0.0.1
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/burn#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs: src
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -Wall
  exposed-modules: Burn.Server
                 , Burn.State
  build-depends: aeson
               , base >= 4.6 && <= 5
               , burn-api
               , bytestring
               , cassava
               , containers
               , data-default
               , directory
               , lens
               , mtl
               , servant      >= 0.9.1.1
               , servant-server  >= 0.9.1.1
               , stm
               , text
               , time
               , transformers-base
               , warp
  default-extensions: DataKinds
                    , LambdaCase
                    , MultiWayIf
                    , TemplateHaskell
                    , TypeOperators

executable burn
  hs-source-dirs:      bin
  ghc-options: -Wall -threaded
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.6 && < 5
                     , burn

test-suite spec
  type:             exitcode-stdio-1.0
  hs-source-dirs:   spec
  main-is:          Spec.hs
  default-language: Haskell2010
  default-extensions: FlexibleContexts
                    , NegativeLiterals
                    , OverloadedStrings
                    , TemplateHaskell
  build-depends: base
               , burn
               , burn-api
               , data-default
               , lens
               , mtl
               , tasty
               , tasty-hunit
               , time
               , transformers-base
  ghc-options: -Wall -threaded
