name:                burn
version:             0.0.1
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/burn#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs: src
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -Wall
  exposed-modules: Burn.API
                 , Burn.Client
                 , Burn.Client.Query
                 , Burn.Client.State
                 , Burn.Optparse
                 , Burn.Optparse.Args
                 , Burn.Optparse.Client
                 , Burn.Optparse.Server
                 , Burn.Optparse.Statistics
                 , Burn.Server
                 , Burn.Server.Handler
                 , Burn.Server.Transform
                 , Burn.Statistics
                 , Burn.Storage
                 , Burn.Types
  build-depends: aeson
               , base >= 4.6 && <= 5
               , bytestring
               , cassava
               , containers
               , data-default
               , directory
               , foldl
               , http-client
               , lens
               , mtl
               , optparse-applicative
               , profunctors
               , servant      >= 0.9.1.1
               , servant-client
               , servant-server  >= 0.9.1.1
               , statistics
               , stm
               , text
               , time
               , transformers-base
               , vector
               , warp
  default-extensions: DataKinds
                    , DeriveFoldable
                    , DeriveFunctor
                    , DeriveGeneric
                    , DeriveTraversable
                    , FlexibleContexts
                    , GeneralizedNewtypeDeriving
                    , LambdaCase
                    , MultiWayIf
                    , TemplateHaskell
                    , TypeOperators

test-suite spec
  type:             exitcode-stdio-1.0
  hs-source-dirs:   spec
  main-is:          Spec.hs
  ghc-options: -Wall -threaded
  default-language: Haskell2010
  default-extensions: FlexibleContexts
                    , NegativeLiterals
                    , OverloadedStrings
                    , TemplateHaskell
  build-depends: base
               , burn
               , data-default
               , lens
               , mtl
               , tasty
               , tasty-hunit
               , time
               , transformers-base
  ghc-options: -Wall -threaded
