name:                burn
version:             0.0.1
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/burn#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs: src
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -Wall
  exposed-modules: Burn.API
                 , Burn.Client
                 , Burn.Client.Query
                 , Burn.Client.State
                 , Burn.Optparse
                 , Burn.Optparse.Args
                 , Burn.Optparse.Client
                 , Burn.Optparse.Elastic
                 , Burn.Optparse.Server
                 , Burn.Optparse.Settings
                 , Burn.Optparse.Statistics
                 , Burn.Server
                 , Burn.Server.Handler
                 , Burn.Server.Transform
                 , Burn.Statistics
                 , Burn.Statistics.Functions
                 , Burn.Statistics.Query
                 , Burn.Statistics.Types
                 , Burn.Storage
                 , Burn.TH
                 , Burn.Types
  build-depends: base >= 4.6 && <= 5
               , aeson
               , bytestring
               , cassava
               , containers
               , data-default
               , dependent-map
               , dependent-sum
               , dependent-sum-template
               , directory
               , dlist
               , foldl
               , generic-lens
               , http-client
               , inflections
               , lens
               , mtl
               , optparse-applicative
               , profunctors
               , servant      >= 0.9.1.1
               , servant-client
               , servant-server  >= 0.9.1.1
               , statistics
               , stm
               , text
               , time
               , transformers-base
               , vector
               , warp
  default-extensions: DataKinds
                    , DefaultSignatures
                    , DeriveAnyClass
                    , DeriveFoldable
                    , DeriveFunctor
                    , DeriveGeneric
                    , DeriveTraversable
                    , DuplicateRecordFields
                    , FlexibleContexts
                    , FlexibleInstances
                    , FunctionalDependencies
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , KindSignatures
                    , LambdaCase
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , OverloadedLabels
                    , OverloadedStrings
                    , PolyKinds
                    , ScopedTypeVariables
                    , TemplateHaskell
                    , TypeFamilies
                    , TypeOperators
                    , UndecidableInstances

test-suite spec
  type:             exitcode-stdio-1.0
  hs-source-dirs:   spec
  main-is:          Spec.hs
  ghc-options: -Wall -threaded
  default-language: Haskell2010
  default-extensions: FlexibleContexts
                    , NegativeLiterals
                    , OverloadedLabels
                    , OverloadedStrings
                    , TemplateHaskell
  build-depends: base
               , burn
               , data-default
               , lens
               , mtl
               , tasty
               , tasty-hunit
               , time
               , transformers-base
