name:                peridot
version:             0.0.1
synopsis:            Kinda framework for dynamic statistical reports
-- description:
homepage:            https://github.com/githubuser/peridot#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-extensions: DataKinds
                    , DefaultSignatures
                    , DeriveFoldable
                    , DeriveFunctor
                    , DeriveGeneric
                    , DeriveTraversable
                    , FlexibleContexts
                    , FlexibleInstances
                    , FunctionalDependencies
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , KindSignatures
                    , LambdaCase
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , PolyKinds
                    , ScopedTypeVariables
                    , TemplateHaskell
                    , TypeFamilies
                    , TypeOperators
                    , UndecidableInstances
  exposed-modules:     Peridot.Auxiliary
                     , Peridot.Core
                     , Peridot.Diffable
                     , Peridot.TimeSeries
                     , Peridot.TimeSeries.Fold
                     , Peridot.TimeSeries.Keys
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , dependent-map
                     , dependent-sum
                     , dependent-sum-template
                     , dlist
                     , foldl
                     , profunctors
                     , time
                     , vector
                     , vinyl

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/peridot
