name:                peridot
version:             0.0.1
synopsis:            Kinda framework for typesafe statistical reports
-- description:
homepage:            https://github.com/githubuser/peridot#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/githubuser/peridot

library
  hs-source-dirs:      src
  ghc-options: -Wall
  default-extensions: DataKinds
                    , DefaultSignatures
                    , DeriveFoldable
                    , DeriveFunctor
                    , DeriveGeneric
                    , DeriveTraversable
                    , FlexibleContexts
                    , FlexibleInstances
                    , FunctionalDependencies
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , KindSignatures
                    , LambdaCase
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , PolyKinds
                    , RankNTypes
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TypeFamilies
                    , TypeOperators
                    , UndecidableInstances
  exposed-modules:     Peridot
                     , Peridot.Auxiliary
                     , Peridot.Core
                     , Peridot.Diffable
                     , Peridot.Grouping
                     , Peridot.Grouping.Group
                     , Peridot.Grouping.Key
                     , Peridot.Statistics
                     , Peridot.Statistics.Fold
                     , Peridot.Statistics.Key
                     , Peridot.TimeSeries
                     , Peridot.TimeSeries.Keys
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , dependent-map
                     , dependent-sum
                     , dependent-sum-template
                     , dlist
                     , foldl >= 1.2.3
                     , profunctors
                     , time
                     , vector
                     , vinyl

  default-language:    Haskell2010

test-suite test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Test.hs
  ghc-options: -Wall -threaded
  default-language: Haskell2010
  default-extensions: DataKinds
                    , FlexibleContexts
                    , GADTs
                    , MultiParamTypeClasses
                    , NegativeLiterals
                    , OverloadedStrings
                    , RankNTypes
                    , TemplateHaskell
                    , ViewPatterns
  build-depends: HUnit
               , base
               , containers
               , dependent-map
               , dependent-sum
               , dependent-sum-template
               , dlist
               , peridot
               , tasty
               , tasty-hunit
               , time
               , vinyl
